--- a/src/main/resources/templates/addPost.html
+++ b/src/main/resources/templates/addPost.html
@@ -11,7 +11,7 @@
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <div class="container-xxl mt-5 text-center" style="max-height : 70%">
-        <form action="/post" method="post">
+        <form th:action="@{/post}" method="post">
             <div class="row">
                 <div class ="col-sm-1">
                     제목
